# leptos-lucide-icons

./: Cargo.toml  LICENSE  build.rs
src/: lib.rs
