[package]
name = "leptos-lucide-icons"
version = "0.1.0"
edition = "2021"
description = "Lucide icons ported over to Leptos"
license = "MIT"
homepage = "https://github.com/Alpyg/leptos-lucide-icons"
repository = "https://github.com/Alpyg/leptos-lucide-icons"

[dependencies]
leptos = { version = "0.6.12", features = ["csr", "nightly"] }

[build-dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
walkdir = "2.5.0"
